--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "lint": "eslint ."
+    "lint": "eslint ./src"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.4",
